2000-09-19 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTextStorage.m: ([-string]) fix to return autoreleased
	copy rather than internal data - pointed out by Fred.
	* Source/NSText.m: ([-string]) don't copy

2000-09-13  Fred Kiefer  <FredKiefer@gmx.de>

	* Source/GSSimpleLayoutManager.m: 
	* Source/GSSimpleLayoutManager.h: 
	New file extracted from NSText.m. This class is now a subclass of
	NSLayoutManager and uses a similar interface. 
	* Source/GNUmakefile:
	Include new file GSSimpleLayoutManager.m
	* Header/gnustep/gui/NSText.h:
	Two new NSTextView like methods.
	* Source/NSText.m: 
	Removed GSSimpleLayoutManager code and use new interface to it.
	* Source/NSTextView.m: 
	[initWithFrame:] switch of the creation of a NSLayoutManager.
	
2000-09-16  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/gui/NSWindowController.h: Add copyright notice.
	Protect with #ifdef's.

2000-09-14  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSPanel.m ([GSAlertPanel
	-initWithContentRect:styleMask:backing:defer:screen:]): set alternate
	return image.
	* Source/NSOpenPanel.m ([NSOpenPanel -controlTextDidEndEditing:]):
	removed.
	* Source/NSSavePanel.m ([NSSavePanel -controlTextDidEndEditing:]): 
	repost currentEvent.
	([NSSavePanel -_initWithoutGModel]): removed form cell action, set
	_okButton image.
	([NSSavePanel -_performReturn:]): removed.
	* Images/common_retH.tiff: new file.
	* Images/GNUmakefile (IMAGE_FILES): update.

Thu Sep 14 14:01:10 2000  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSMatrix.m ([-textDidBeginEditing:]),
	([-textDidChange:]), ([-textDidEndEditing:]): : Fixed memory leak.

2000-09-13  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSBrowser.m ([NSBrowser -_performLoadOfColumn:]): fixed
	intercell space values.

	* Source/NSText.m ([NSText -keyDown:]): removed forward for illegal
	text field events.

	* Source/NSSavePanel.m ([NSSavePanel -controlTextDidEndEditing:]):
	implemented for text field movement.